# rust_shenanigans

./: Cargo.toml  README.md  build.rs
src/: deco.c  lib.rs
