[package]
name = "deco"
version = "0.1.0"
authors = ["Emīls Piņķis <pinkisemils@gmail.com>"]
build = "build.rs"

[dependencies]
#piston = "0.31.1"
#piston2d-graphics = "0.21.1"
#pistoncore-glutin_window = "0.35.0"
#piston2d-opengl_graphics = "0.40.0"
image = "*"
libc = "0.2"
jpeg-decoder = "0.1"

[build-dependencies]
gcc = "0.3"
